# graph-rag-recipes

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
data/processed/: README.md  sample_recipes.json
data/raw/: README.md
docs/: final-project.tex  report_liuyizhou.tex  report_yangjianheng.tex  report_zhangziye.tex  分工协作计划.md  实现细节报告.md  技术方案报告.md
docs/liuyizhou/: report_liuyizhou.aux  report_liuyizhou.fdb_latexmk  report_liuyizhou.fls  report_liuyizhou.out  report_liuyizhou.tex  report_liuyizhou.toc  report_liuyizhou.xdv
docs/yangjianheng/: report_yangjianheng.aux  report_yangjianheng.fdb_latexmk  report_yangjianheng.fls  report_yangjianheng.out  report_yangjianheng.tex  report_yangjianheng.toc  report_yangjianheng.xdv
docs/zhangziye/: report_zhangziye.aux  report_zhangziye.fdb_latexmk  report_zhangziye.fls  report_zhangziye.out  report_zhangziye.tex  report_zhangziye.toc  report_zhangziye.xdv
scripts/: bootstrap_data.py  run_pipeline.py
src/graph_rag_recipes/: __init__.py  config.py  data_ingest.py  data_models.py  embeddings.py  graph_builder.py  llm_generator.py  pipeline.py  retrieval.py  ui_components.py  user_profiles.py
